...
                                        <color key="textColor" name="light-text"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aOC-0b-wG0" userLabel="Email Text Field" customClass="MuseumTextField" customModule="Museum" customModuleProvider="target">
                                        <rect key="frame" x="71.666666666666686" y="547" width="250" height="42"/>
                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                        <accessibility key="accessibilityConfiguration" identifier="login-text-field"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="250" id="9Xs-u9-94k"/>
                                            <constraint firstAttribute="height" constant="42" id="pMg-ti-7Vi"/>
                                        </constraints>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="boolean" keyPath="securityEntry" value="NO"/>
...
                                        <connections>
                                            <outletCollection property="gestureRecognizers" destination="AoF-wh-ULT" appends="YES" id="NXY-e1-xJi"/>
                                        </connections>
                                    </view>
                                    <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z9u-K2-9Aj" userLabel="Log In Button">
                                        <rect key="frame" x="71.666666666666686" y="683" width="250" height="42"/>
                                        <accessibility key="accessibilityConfiguration" identifier="login-button"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="42" id="hhi-i1-thu"/>
                                        </constraints>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="filled" cornerStyle="fixed">
                                            <backgroundConfiguration key="background" cornerRadius="0.0"/>
...
                                            <outletCollection property="gestureRecognizers" destination="CEv-pr-BbJ" appends="YES" id="C4P-Sf-fcz"/>
                                        </connections>
                                    </view>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="adF-ls-H1E" userLabel="Password Text Field" customClass="MuseumTextField" customModule="Museum" customModuleProvider="target">
                                        <rect key="frame" x="71.666666666666686" y="590" width="250" height="42"/>
                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                        <accessibility key="accessibilityConfiguration" identifier="password-text-field"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="42" id="x9z-tu-FD2"/>
                                        </constraints>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="boolean" keyPath="securityEntry" value="YES"/>
                                            <userDefinedRuntimeAttribute type="string" keyPath="localizedPlaceholder" value="login.screen.password.textfield.placeholder"/>
...
