...
                                                <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="10"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iGa-Rz-gUz">
                                                <rect key="frame" x="339" y="13" width="54" height="34.666666666666664"/>
                                                <accessibility key="accessibilityConfiguration" identifier="logout-button"/>
                                                <state key="normal" title="Button"/>
                                                <buttonConfiguration key="configuration" style="plain">
                                                    <attributedString key="attributedTitle">
                                                        <fragment content="LOG">
                                                            <attributes>
                                                                <font key="NSFont" size="10" name="Montserrat-Regular"/>
...
